remove test.txt

--- a/index.html
+++ b/index.html
@@ -20,25 +20,25 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
-						<h1>Stellar</h1>
-						<p>Just another free, fully responsive site template<br />
-						built by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<h1>Hi, I'm Megan Xiao</h1>
+						<p>An aspiring data scientist and analyst, proficient in R and Python<br />
+						<!-- remove this section later if not necessary --> TBA <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li><a href="#intro" class="active">Introduction</a></li>
-							<li><a href="#first">First Section</a></li>
-							<li><a href="#second">Second Section</a></li>
-							<li><a href="#cta">Get Started</a></li>
+							<li><a href="#intro" class="active">About Me</a></li>
+							<li><a href="#first">Experience & Education</a></li>
+							<li><a href="#second">Projects</a></li>
+							<li><a href="#cta">Contact Me</a></li>
 						</ul>
 					</nav>
 
 				<!-- Main -->
 					<div id="main">
 
-						<!-- Introduction -->
+						<!-- About Me -->
 							<section id="intro" class="main">
 								<div class="spotlight">
 									<div class="content">
@@ -56,7 +56,7 @@
 								</div>
 							</section>
 
-						<!-- First Section -->
+						<!-- Experience & Education -->
 							<section id="first" class="main special">
 								<header class="major">
 									<h2>Magna veroeros</h2>
@@ -85,7 +85,7 @@
 								</footer>
 							</section>
 
-						<!-- Second Section -->
+						<!-- Projects -->
 							<section id="second" class="main special">
 								<header class="major">
 									<h2>Ipsum consequat</h2>
@@ -122,7 +122,7 @@
 								</footer>
 							</section>
 
-						<!-- Get Started -->
+						<!-- Contact Me -->
 							<section id="cta" class="main special">
 								<header class="major">
 									<h2>Congue imperdiet</h2>
