--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>Ipsum sed adipiscing</h2>
+											<h2>What I do</h2>
 										</header>
 										<p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
 										adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
 										Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
-										<ul class="actions">
+										<!--<ul class="actions">
 											<li><a href="generic.html" class="button">Learn More</a></li>
-										</ul>
+										</ul>-->
 									</div>
 									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 								</div>
@@ -64,28 +64,59 @@
 						<!-- Experience & Education -->
 							<section id="first" class="main special">
 								<header class="major">
-									<h2>Magna veroeros</h2>
+									<h2>Experience & Education</h2>
 								</header>
-								<ul class="features">
+								<div class="features">
+									<ul>
 									<li>
-										<span class="icon solid major style1 fa-code"></span>
-										<h3>Ipsum consequat</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<div class="jobPosition">
+											<h3> Job Title </h3>
+											<h3> Date </h3>
+										</div>
+										<div class = "description">
+											<h4> Company | Location</h4>
+											<span>
+											Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
+											adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
+											Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.
+											</span>
+										</div>
 									</li>
+
 									<li>
-										<span class="icon major style3 fa-copy"></span>
-										<h3>Amed sed feugiat</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<div class="jobPosition">
+											<h3> Job Title </h3>
+											<h3> Date </h3>
+										</div>
+										<div class = "description">
+											<h4> Company | Location</h4>
+											<span>
+											Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
+											adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
+											Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.
+											</span>
+										</div>
 									</li>
+
 									<li>
-										<span class="icon major style5 fa-gem"></span>
-										<h3>Dolor nullam</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<div class="jobPosition">
+											<h3> Job Title </h3>
+											<h3> Date </h3>
+										</div>
+										<div class = "description">
+											<h4> Company | Location</h4>
+											<span>
+											Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
+											adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
+											Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.
+											</span>
+										</div>
 									</li>
+									
 								</ul>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="generic.html" class="button">Learn More</a></li>
+										<li><a href="generic.html" class="button"> See Full Resume</a></li>
 									</ul>
 								</footer>
 							</section>
@@ -93,7 +124,7 @@
 						<!-- Projects -->
 							<section id="second" class="main special">
 								<header class="major">
-									<h2>Ipsum consequat</h2>
+									<h2>Projects</h2>
 									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
 									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
 								</header>
