reformat generic.html future project page, added description to About Me

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Stellar by HTML5 UP</title>
+		<title>Megan Xiao | DS Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -22,7 +22,6 @@
 						<!---<span class="logo"><img src="images/logo.svg" alt="" /></span>-->
 						<h1>Hi, I'm Megan Xiao</h1>
 						<p>An aspiring data scientist and analyst, proficient in R and Python<br />
-						<!-- remove this section later if not necessary --> TBA <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</header>
 
 				<!-- Nav -->
@@ -48,11 +47,11 @@
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>What I do</h2>
+											<h2>Who Am I?</h2>
 										</header>
-										<p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
-										adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
-										Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
+										<p>Greetings, my name is Megan Xiao.</p>
+										<p>I am a Data Science & Analytics undergraduate student at the University of South Florida with an interest in visualizing and predicting online information behavior. Which means, I want to know what motivates people to do the things they do.</p>
+										<p>My website is a little bare-bones right now, but I will be uploading major projects soon!</p>
 										<!--<ul class="actions">
 											<li><a href="generic.html" class="button">Learn More</a></li>
 										</ul>-->
@@ -116,7 +115,7 @@
 								</ul>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="generic.html" class="button"> See Full Resume</a></li>
+										<li><a href="Xiao_Megan_Resume_2025.pdf" class="button" target = "_blank"> See Full Resume</a></li>
 									</ul>
 								</footer>
 							</section>
