--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<title>Megan Xiao | DS Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
@@ -22,6 +23,10 @@
 						<!---<span class="logo"><img src="images/logo.svg" alt="" /></span>-->
 						<h1>Hi, I'm Megan Xiao</h1>
 						<p>An aspiring data scientist and analyst, proficient in R and Python<br />
+							<ul class="icons">
+								<li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
+								<li><a href="#" class="icon brands fa-linkedin alt"><span class="label">LinkedIn</span></a></li>
+							</ul>
 					</header>
 
 				<!-- Nav -->
@@ -69,15 +74,13 @@
 									<ul>
 									<li>
 										<div class="jobPosition">
-											<h3> Job Title </h3>
-											<h3> Date </h3>
+											<h3><b> Business Analyst </b></h3>
+											<h3>Oct. 2025 - Present </h3>
 										</div>
 										<div class = "description">
-											<h4> Company | Location</h4>
+											<h4>Four Winds IT Consulting | Sarasota, FL</h4>
 											<span>
-											Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
-											adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
-											Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.
+											As a part-time business/marketing analyst, I've built and deployed AI HubSpot agents to send over 100+ outbound emails. I've analyzed and visualized competitor data using Power BI to compare their client-base to ours. As I continue working in this role, I hope to improve our marketing strategy to maximize engagement and ROI.
 											</span>
 										</div>
 									</li>
@@ -115,7 +118,7 @@
 								</ul>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="Xiao_Megan_Resume_2025.pdf" class="button" target = "_blank"> See Full Resume</a></li>
+										<li><a href="Xiao_Megan_Resume_2025_portfolio.pdf" class="button" target = "_blank"> See Full Resume →</a></li>
 									</ul>
 								</footer>
 							</section>
@@ -124,8 +127,7 @@
 							<section id="second" class="main special">
 								<header class="major">
 									<h2>Projects</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<p>My top 3 projects I've done for personal experience and for school work.<br /> Hover to see details.</p>
 								</header>
 								<div class="grid-container">
 									<a href = "generic.html">
@@ -165,7 +167,7 @@
 								<!--<p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p>-->
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="generic.html" class="button">See Full Project List → </a></li>
+										<li><a href="project-list.html" class="button">See Full Project List → </a></li>
 									</ul>
 								</footer>
 							</section>
@@ -174,37 +176,37 @@
 							<section id="cta" class="main special">
 								<header class="major">
 									<h2>Contact Me</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<p>Need to get in contact with me?<br />
+									Fill out the form below.</p>
 								</header>
 								<div class ="contact-box">
 									<form id = "myForm" class = "contact-form" action="https://api.web3forms.com/submit" method="POST">
 										 <input type="hidden" name="access_key" value="4ec04335-4123-44e2-9517-281180b268b2">
 										<div class = "form-group">
 											<label for = "fname"> First Name *</label>
-											<input type="text" id="fname" name="firstname" placeholder="Your name.." required class="form-element">
+											<input type="text" id="fname" name="firstname" placeholder="Your first name..." required class="form-element">
 										</div>
 										
 										<div class = "form-group">
 											<label for="lname">Last Name *</label>
-											<input type="text" id="lname" name="lastname" placeholder="Your last name.." required class="form-element">
+											<input type="text" id="lname" name="lastname" placeholder="Your last name..." required class="form-element">
 										</div>
 
 										<div class = "form-group">
 											<label for="email">Email Address *</label>
-											<input type="email" id="email" name="email" placeholder="Your email.." required class="form-element">
+											<input type="email" id="email" name="email" placeholder="e.g. johndoe@email.com..." required class="form-element">
 										</div>
 
 										<div class = "form-group">
 											<label for="phone-num">Phone Number</label>
 											<input type = "text"
-											id="phone-num" name="phone-num" placeholder="Your phone number.." class="form-element">
+											id="phone-num" name="phone-num" placeholder="e.g. 123-456-7890..." class="form-element">
 										</div>
 
 
 										<div class = "form-group full">
 											<label for="message">Your Message *</label>
-											<textarea id="message" name="message" placeholder="Write something.." style="height:200px" class="form-element"></textarea>
+											<textarea id="message" name="message" placeholder="Write something..." style="height:200px" class="form-element"></textarea>
 										</div>
 										<div class = "submit-group">
 											<input type="submit" value="Submit">
@@ -212,6 +214,7 @@
 										</div>
 										
 									</form>
+									<p>Or send me an <a href="mailto:xmegan10@gmail.com?subject=Megan Xiao Portfolio Message: " target=”_blank”>email </a> instead. </p>
 								</div>
 
 
@@ -227,7 +230,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<section>
+						<!--<section>
 							<h2>Aliquam sed mauris</h2>
 							<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
 							<ul class="actions">
@@ -250,7 +253,7 @@
 								<li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
 								<li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
 								<li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li>
-							</ul>
+							</ul>-->
 						</section>
 						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
