fix the grids in project section

--- a/index.html
+++ b/index.html
@@ -127,40 +127,41 @@
 							<section id="second" class="main special">
 								<header class="major">
 									<h2>Projects</h2>
-									<p>My top 3 projects I've done for personal experience and for school work.<br /> Hover to see details.</p>
+									<p>My top 3 projects I've done for personal experience and for school work.<br /> Click to see more. </p>
 								</header>
 								<div class="grid-container">
 									<a href = "generic.html">
 									<div class = "project-item">
 										<img height ="300px" src="images/pic01.jpg" alt=""> <!-- note: replace src with diff image later :)-->
-										<div class="hidden-text">
+										<div class="project-text">
 											<h4>Project Title</h4>
-											<h5><em>Date</em> </h5>
 											<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue
 									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
 										</div>
 									</div>
 									</a>
 									
+									<a href = "generic.html">
 									<div class = "project-item">
 										<img height ="300px" src="images/pic01.jpg" alt=""> <!-- note: replace src with diff image later :)-->
-										<div class="hidden-text">
+										<div class="project-text">
 											<h4>Project Title</h4>
-											<h5><em>Date</em> </h5>
 											<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue
 									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
 										</div>
 									</div>
+									</a>
 
+									<a href = "generic.html">
 									<div class = "project-item">
 										<img height ="300px" src="images/pic01.jpg" alt=""> <!-- note: replace src with diff image later :)-->
-										<div class="hidden-text">
+										<div class="project-text">
 											<h4>Project Title</h4>
-											<h5><em>Date</em> </h5>
 											<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue
 									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
 										</div>
 									</div>
+									</a>
 								</div>
 
 								
