--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 										</header>
 										<p>Greetings, my name is Megan Xiao.</p>
 										<p>I am a Data Science & Analytics undergraduate student at the University of South Florida with an interest in visualizing and predicting online information behavior. Which means, I want to know what motivates people to do the things they do.</p>
-										<p>My website is a little bare-bones right now, but I will be uploading major projects soon!</p>
+										<a href="about-me-read-more.html"> Read More →</a>
 										<!--<ul class="actions">
 											<li><a href="generic.html" class="button">Learn More</a></li>
 										</ul>-->
@@ -282,6 +282,7 @@
 				myForm.addEventListener('submit', function(event){
 					myForm.reset();
 				});
+
 			</script>
 
 	</body>
