fix about me read more first gen american

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 						<h1>Hi, I'm Megan Xiao</h1>
 						<p>An aspiring data scientist and analyst, proficient in R and Python<br />
 							<ul class="icons">
-								<li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands fa-linkedin alt"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://github.com/xmegan10" target = "_blank" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
+								<li><a href="https://www.linkedin.com/in/megan-xiao-b2417029b/" target = "_blank" class="icon brands fa-linkedin alt"><span class="label">LinkedIn</span></a></li>
 							</ul>
 					</header>
 
@@ -256,7 +256,7 @@
 								<li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li>
 							</ul>-->
 						</section>
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; Megan Xiao. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
 			</div>
