add lis4934 assignment

--- a/about-me-read-more.html
+++ b/about-me-read-more.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Project List</title>
+		<title>More About Me</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 				<!-- Header -->
 					<header id="header">
 						<a href="index.html">← Go back</a>
-						<h1>About Me</h1>
+						<h1>More About Me</h1>
 						<!-- <p>A list of all my projects sorted by most recent.</p>-->
 					</header>
 					
