--- a/project-list.html
+++ b/project-list.html
@@ -34,34 +34,13 @@
 
 								<div class = "project-wrapper">
 									<div>
-									<h2>Project Name 1</h2>
-                                    <h3>Date</h3>
-									<p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus. Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
-                                    <p> See the full project <a class="see-full" href="index.html"> here.</a></p>
+									<h2><a href=projects/lis4934-hypothetical-pmp.html>USF LIS4934: Hypothetical Project Management Plan</a></h2>
+                                    <h3>Published: 2/22/2026</h3>
+									<p>A writing assignment I did for my LIS4934 class at USF. I was given the task to write a project management plan for the hypothetical creation of a software-tracking database. </p>
 									</div>
 								</div>
 
 								<hr class="solid-line">
-
-								<div class = "project-wrapper">
-									<div>
-									<h2>Project Name 2</h2>
-                                    <h3>Date</h3>
-									<p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus. Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
-                                    <p> See the full project <a class="see-full" href="index.html"> here.</a></p>
-									</div>
-								</div>
-
-								<hr class="solid-line">
-
-								<div class = "project-wrapper">
-									<div>
-									<h2>Project Name 3</h2>
-                                    <h3>Date</h3>
-									<p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus. Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
-                                    <p> See the full project <a class="see-full" href="index.html"> here.</a></p>
-									</div>
-								</div>
 
 							
 							</section>
