--- a/project-list.html
+++ b/project-list.html
@@ -34,9 +34,19 @@
 
 								<div class = "project-wrapper">
 									<div>
+									<h2><a href=projects/lis4934-hypothetical-pmp.html>USF LIS4934: Event Report</a></h2>
+                                    <h3>Published: 3/1/2026</h3>
+									<p> I was given the task to write an "Event Report" that includes reflective thoughts and impressions of a relevant event (TED talks) content, speaker, topic, and ideas presented.</p>
+									</div>
+								</div>
+
+								<hr class="solid-line">
+
+								<div class = "project-wrapper">
+									<div>
 									<h2><a href=projects/lis4934-hypothetical-pmp.html>USF LIS4934: Hypothetical Project Management Plan</a></h2>
                                     <h3>Published: 2/22/2026</h3>
-									<p>A writing assignment I did for my LIS4934 class at USF. I was given the task to write a project management plan for the hypothetical creation of a software-tracking database. </p>
+									<p> I was given the task to write a project management plan for the hypothetical creation of a software-tracking database. </p>
 									</div>
 								</div>
 
